--- a/contrib/CMakeLists.txt
+++ b/contrib/CMakeLists.txt
@@ -1,30 +1,31 @@
 if (CLICKHOUSE_ODBC_TEST)
     add_subdirectory (gtest)
+
     if (USE_INTERNAL_NANOODBC_LIBRARY)
-        # git clone --recursive https://github.com/nanodbc/nanodbc.git
         set (NANODBC_DISABLE_EXAMPLES 1 CACHE INTERNAL "")
         set (NANODBC_DISABLE_LIBCXX 1 CACHE INTERNAL "")
         set (NANODBC_DISABLE_TESTS 1 CACHE INTERNAL "")
         set (NANODBC_DISABLE_INSTALL 1 CACHE INTERNAL "")
-        set (NANODBC_ENABLE_UNICODE ${UNICODE} CACHE INTERNAL "")
+        set (NANODBC_ENABLE_UNICODE 0 CACHE INTERNAL "")
         add_subdirectory (nanodbc)
-
-        # Fix iodbc include bug
-        if (NOT MSVC)
-            set_target_properties(nanodbc PROPERTIES INCLUDE_DIRECTORIES "${ODBC_INCLUDE_DIRECTORIES};${CMAKE_CURRENT_SOURCE_DIR}/nanodbc")
-        endif ()
-        set_target_properties(nanodbc PROPERTIES INTERFACE_LINK_LIBRARIES "${ODBC_LIBRARIES}")
+        set_target_properties(${NANOODBC_LIBRARY} PROPERTIES INTERFACE_LINK_LIBRARIES ODBC::ClientAPI)
     endif ()
 endif ()
 
 if (USE_INTERNAL_SSL_LIBRARY)
     set (BUILD_SHARED 0)
     set (USE_SHARED 0)
+    if (XCODE)
+        set (ENABLE_ASM 0 CACHE INTERNAL "")
+    endif ()
     add_subdirectory (ssl)
 endif ()
 
 if (USE_INTERNAL_POCO_LIBRARY)
     set (POCO_UNBUNDLED_ZLIB 1 CACHE INTERNAL "")
+    if (WIN32)
+        set (ENABLE_NETSSL_WIN 1 CACHE INTERNAL "")
+    endif ()
     add_subdirectory (poco)
     if (OPENSSL_FOUND AND TARGET Crypto)
         # Bug in poco https://github.com/pocoproject/poco/pull/2100 found on macos
