--- a/driver/platform/config_cmake.h.in
+++ b/driver/platform/config_cmake.h.in
@@ -7,11 +7,9 @@
 #define VERSION_EXTRA ""
 #define VERSION_STRING "@PROJECT_VERSION@"
 
+#define SYSTEM_STRING "@CMAKE_SYSTEM@"
+#define ODBC_IMPL "@ODBC_IMPL@"
+
 #cmakedefine01 USE_SSL
 #cmakedefine01 USE_DEBUG_17
-#cmakedefine01 ODBC_IODBC
-#cmakedefine01 ODBC_UNIXODBC
-
-#cmakedefine ODBC_LIBRARIES "@ODBC_LIBRARIES@"
-#cmakedefine ODBC_INCLUDE_DIRECTORIES "@ODBC_INCLUDE_DIRECTORIES@"
-#cmakedefine CMAKE_SYSTEM "@CMAKE_SYSTEM@"
+#cmakedefine WORKAROUND_TRIM_TRAILING_NULL
