--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -6,6 +6,7 @@ find_program(IODBCTEST iodbctest)
 find_program(IODBCTESTW iodbctestw)
 find_program(SQLCMD sqlcmd)
 
+set(PERL_USES_MDAC 0)
 set(PERL_USES_UNIXODBC 0)
 set(PERL_USES_IODBC 0)
 
@@ -17,6 +18,9 @@ if(PERL)
 #       ERROR_QUIET
     )
     message(STATUS "ODBC Driver Manager used by Perl's DBD::ODBC: ${_perl_output}")
+    if(_perl_output MATCHES "Microsoft")
+        set(PERL_USES_MDAC 1)
+    endif()
     if(_perl_output MATCHES "unixODBC")
         set(PERL_USES_UNIXODBC 1)
     endif()
@@ -25,6 +29,7 @@ if(PERL)
     endif()
 endif()
 
+set(PYTHON_USES_MDAC 0)
 set(PYTHON_USES_UNIXODBC 0)
 set(PYTHON_USES_IODBC 0)
 
@@ -36,6 +41,9 @@ if(PYTHON)
 #       ERROR_QUIET
     )
     message(STATUS "ODBC Driver Manager used by Python's pyodbc: ${_python_output}")
+    if(_python_output MATCHES "Microsoft")
+        set(PYTHON_USES_MDAC 1)
+    endif()
     if(_python_output MATCHES "unixODBC")
         set(PYTHON_USES_UNIXODBC 1)
     endif()
@@ -48,9 +56,11 @@ message(STATUS "Testing with:\n\t"
     "TEST_DSN=${TEST_DSN}\n\t"
     "TEST_DSN_W=${TEST_DSN_W}\n\t"
     "PERL=${PERL}\n\t"
+    "PERL_USES_MDAC=${PERL_USES_MDAC}\n\t"
     "PERL_USES_UNIXODBC=${PERL_USES_UNIXODBC}\n\t"
     "PERL_USES_IODBC=${PERL_USES_IODBC}\n\t"
     "PYTHON=${PYTHON}\n\t"
+    "PYTHON_USES_MDAC=${PYTHON_USES_MDAC}\n\t"
     "PYTHON_USES_UNIXODBC=${PYTHON_USES_UNIXODBC}\n\t"
     "PYTHON_USES_IODBC=${PYTHON_USES_IODBC}\n\t"
     "ISQL=${ISQL}\n\t"
@@ -64,54 +74,70 @@ set(SQL_QUERY "123456+456789" CACHE STRING "")
 set(SQL_ANSWER "580245" CACHE STRING "")
 
 if(TEST_DSN)
-    if(PERL AND ((ODBC_UNIXODBC AND PERL_USES_UNIXODBC) OR (ODBC_IODBC AND PERL_USES_IODBC)))
+    if(PERL AND (
+            ("${ODBC_IMPL}" STREQUAL "MDAC" AND PERL_USES_MDAC) OR
+            ("${ODBC_IMPL}" STREQUAL "UnixODBC" AND PERL_USES_UNIXODBC) OR
+            ("${ODBC_IMPL}" STREQUAL "iODBC" AND PERL_USES_IODBC)
+    ))
         add_test(NAME "test.pl-a-a" COMMAND ${PERL} ${CMAKE_CURRENT_SOURCE_DIR}/test.pl ${TEST_DSN} a)
         add_test(NAME "test.pl-w-a" COMMAND ${PERL} ${CMAKE_CURRENT_SOURCE_DIR}/test.pl ${TEST_DSN} w)
     endif()
-    if(PYTHON AND ((ODBC_UNIXODBC AND PYTHON_USES_UNIXODBC) OR (ODBC_IODBC AND PYTHON_USES_IODBC)))
+    if(PYTHON AND (
+            ("${ODBC_IMPL}" STREQUAL "MDAC" AND PYTHON_USES_MDAC) OR
+            ("${ODBC_IMPL}" STREQUAL "UnixODBC" AND PYTHON_USES_UNIXODBC) OR
+            ("${ODBC_IMPL}" STREQUAL "iODBC" AND PYTHON_USES_IODBC)
+    ))
         add_test(NAME "test.py-a-a" COMMAND ${PYTHON} ${CMAKE_CURRENT_SOURCE_DIR}/test.py ${TEST_DSN} a)
         add_test(NAME "test.py-w-a" COMMAND ${PYTHON} ${CMAKE_CURRENT_SOURCE_DIR}/test.py ${TEST_DSN} w)
     endif()
-    if(ISQL AND ODBC_UNIXODBC)
+    if(ISQL AND "${ODBC_IMPL}" STREQUAL "UnixODBC")
         add_test(NAME "isql-a" COMMAND sh -c "echo select ${SQL_QUERY} | ${ISQL} ${TEST_DSN} | grep ${SQL_ANSWER}")
         add_test(NAME "test.sh-isql-a" COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/test.sh ${ISQL} ${TEST_DSN} -v -b)
     endif()
-    if(IUSQL AND ODBC_UNIXODBC)
+    if(IUSQL AND "${ODBC_IMPL}" STREQUAL "UnixODBC")
         add_test(NAME "iusql-a" COMMAND sh -c "echo select ${SQL_QUERY} | ${IUSQL} ${TEST_DSN} | grep ${SQL_ANSWER}")
         add_test(NAME "test.sh-iusql-a" COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/test.sh ${IUSQL} ${TEST_DSN} -v -b)
     endif()
-    if(IODBCTEST AND ODBC_IODBC)
+    if(IODBCTEST AND "${ODBC_IMPL}" STREQUAL "iODBC")
         add_test(NAME "iodbctest-a" COMMAND sh -c "echo select ${SQL_QUERY} | ${IODBCTEST} \"DSN=${TEST_DSN}\" | grep ${SQL_ANSWER}")
         add_test(NAME "test.sh-iodbctest-a" COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/test.sh ${IODBCTEST} "DSN=${TEST_DSN}")
     endif()
-    if(IODBCTESTW AND ODBC_IODBC)
+    if(IODBCTESTW AND "${ODBC_IMPL}" STREQUAL "iODBC")
         add_test(NAME "iodbctestw-a" COMMAND sh -c "echo select ${SQL_QUERY} | ${IODBCTESTW} \"DSN=${TEST_DSN}\" | grep ${SQL_ANSWER}")
         add_test(NAME "test.sh-iodbctestw-a" COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/test.sh ${IODBCTESTW} "DSN=${TEST_DSN}")
     endif()
 endif()
 
 if(TEST_DSN_W)
-    if(PERL AND ((ODBC_UNIXODBC AND PERL_USES_UNIXODBC) OR (ODBC_IODBC AND PERL_USES_IODBC)))
+    if(PERL AND (
+            ("${ODBC_IMPL}" STREQUAL "MDAC" AND PERL_USES_MDAC) OR
+            ("${ODBC_IMPL}" STREQUAL "UnixODBC" AND PERL_USES_UNIXODBC) OR
+            ("${ODBC_IMPL}" STREQUAL "iODBC" AND PERL_USES_IODBC)
+    ))
         add_test(NAME "test.pl-a-w" COMMAND ${PERL} ${CMAKE_CURRENT_SOURCE_DIR}/test.pl ${TEST_DSN_W} a)
         add_test(NAME "test.pl-w-w" COMMAND ${PERL} ${CMAKE_CURRENT_SOURCE_DIR}/test.pl ${TEST_DSN_W} w)
     endif()
-    if(PYTHON AND ((ODBC_UNIXODBC AND PYTHON_USES_UNIXODBC) OR (ODBC_IODBC AND PYTHON_USES_IODBC)))
+    if(PYTHON AND (
+            ("${ODBC_IMPL}" STREQUAL "MDAC" AND PYTHON_USES_MDAC) OR
+            ("${ODBC_IMPL}" STREQUAL "UnixODBC" AND PYTHON_USES_UNIXODBC) OR
+            ("${ODBC_IMPL}" STREQUAL "iODBC" AND PYTHON_USES_IODBC)
+    ))
         add_test(NAME "test.py-a-w" COMMAND ${PYTHON} ${CMAKE_CURRENT_SOURCE_DIR}/test.py ${TEST_DSN_W} a)
         add_test(NAME "test.py-w-w" COMMAND ${PYTHON} ${CMAKE_CURRENT_SOURCE_DIR}/test.py ${TEST_DSN_W} w)
     endif()
-    if(ISQL AND ODBC_UNIXODBC)
+    if(ISQL AND "${ODBC_IMPL}" STREQUAL "UnixODBC")
         add_test(NAME "isql-w" COMMAND sh -c "echo select ${SQL_QUERY} | ${ISQL} ${TEST_DSN_W} | grep ${SQL_ANSWER}")
         add_test(NAME "test.sh-isql-w" COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/test.sh ${ISQL} ${TEST_DSN_W} -v -b)
     endif()
-    if(IUSQL AND ODBC_UNIXODBC)
+    if(IUSQL AND "${ODBC_IMPL}" STREQUAL "UnixODBC")
         add_test(NAME "iusql-w" COMMAND sh -c "echo select ${SQL_QUERY} | ${IUSQL} ${TEST_DSN_W} | grep ${SQL_ANSWER}")
         add_test(NAME "test.sh-iusql-w" COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/test.sh ${IUSQL} ${TEST_DSN_W} -v -b)
     endif()
-    if(IODBCTEST AND ODBC_IODBC)
+    if(IODBCTEST AND "${ODBC_IMPL}" STREQUAL "iODBC")
         add_test(NAME "iodbctest-w" COMMAND sh -c "echo select ${SQL_QUERY} | ${IODBCTEST} \"DSN=${TEST_DSN_W}\" | grep ${SQL_ANSWER}")
         add_test(NAME "test.sh-iodbctest-w" COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/test.sh ${IODBCTEST} "DSN=${TEST_DSN_W}")
     endif()
-    if(IODBCTESTW AND ODBC_IODBC)
+    if(IODBCTESTW AND "${ODBC_IMPL}" STREQUAL "iODBC")
         add_test(NAME "iodbctestw-w" COMMAND sh -c "echo select ${SQL_QUERY} | ${IODBCTESTW} \"DSN=${TEST_DSN_W}\" | grep ${SQL_ANSWER}")
         add_test(NAME "test.sh-iodbctestw-w" COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/test.sh ${IODBCTESTW} "DSN=${TEST_DSN_W}")
     endif()
