--- a/driver/test/CMakeLists.txt
+++ b/driver/test/CMakeLists.txt
@@ -7,6 +7,7 @@ function(declare_odbc_test_targets libname UNICODE)
         lexer_ut.cpp
         AttributeContainer_ut.cpp
         type_conversion_ut.cpp
+        buffer_filling_ut.cpp
     )
 
     target_link_libraries(${libname}-ut
